style.css
@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@200;300;400;500;700;900&display=swap');

:root
{
    font-size: 16px;
    font-family: "Gothic A1", "sans-serif";
    --text-primary: #b6b6b6;
    --text-seconday: aliceblue;
    --bg-primary: #23232e;
    --bg-secondary: #141418;
    --transition-speed: 500ms
}

html
{
    overflow: hidden;
    height: 100%;
}

body
{
    margin: 0;
    padding: 0;

    overflow: auto;
    height: 100%;
    overscroll-behavior: none;
}

main
{
    font-family: "Gothic A1", "sans-serif";

    margin-left: 5rem;
    padding: 1rem;
    background: url(assets/background.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100vh;

    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

/* Scroll bar only affects google chrome at the moment */
body::-webkit-scrollbar
{
    width: 0.25rem;
}

body::-webkit-scrollbar-track
{
    background-color: #d1c0a8;
}

body::-webkit-scrollbar-thumb
{
    background-color: #3e69ad;
}

.navbar
{
    width: 5rem;
    height: 100vh;
    position: fixed;
    background-color: var(--bg-primary);
    transition: width 500ms ease;
}

.logo svg
{
    transform: rotate(0deg);
    transition: var(--transition-speed);
}

.navbar:hover .logo svg
{
    transform: rotate(-360deg);
}

.navbar-nav
{
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.nav-item
{
    width: 100%;
}

.nav-link
{
    display: flex;
    align-items: center;
    height: 5rem;
    color: var(--text-primary);
    text-decoration: none;
    filter: grayscale(100%) opacity(0.7);
    transition: var(--transition-speed);
}

.nav-link:hover
{
    filter: grayscale(0%) opacity(1);
    background: var(--bg-secondary);
    color: var(--text-seconday);
}

.link-text
{
    display: none;
    margin-left: 1rem;
}

.nav-link svg
{
    min-width: 2rem;
    margin: 0 1.5rem;
}

.navbar:hover
{
    width: 15rem;
}

.navbar:hover .link-text
{
    display: block;
}

.logo
{
    font-weight: bold;
    width: 100%;
    text-transform: uppercase;
    margin-bottom: 1rem;
    text-align: center;
    color: var(--bg-secondary);
    background: var(--bg-primary);
    letter-spacing: 0.3ch;
}



h2
{
    font-size: 2em;
    text-align: left;
    margin: 20px;
    padding: none;
    color: aliceblue;
    letter-spacing: 0.1em;
    width: 100%;
}

p
{
    font-size: .9em;
    text-align: left;
    margin: 20px;
    padding: none;
    color: aliceblue;
    letter-spacing: 0.1em;
    width: 100%;
}

.inputs
{
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    flex-direction: column;
    z-index: 2;

    border: 2px;
    border-style: solid;
    border-color: aliceblue;
    border-radius: 10px;
    backdrop-filter: blur(10px);
    height: 500px;
    width: 350px;
}

.entry-box
{
    display: flex;
    align-items: center;
    margin: 20px;
    padding: 10px;
    border: 2px solid aliceblue;
    border-radius: 10px;
    background-color: transparent;
    position: relative;
    font-size: 18px;
}

.entry-box input[type="text"]
{
    width: 100%;
    padding: 20px 10px 5px 0px;
    border: none;
    border-radius: 10px;
    background-color: transparent;
    outline: none;
    font-size: inherit;
    color: aliceblue;
}

.entry-box input[type="password"]
{
    width: 100%;
    padding: 20px 10px 5px 0px;
    border: none;
    border-radius: 10px;
    background-color: transparent;
    outline: none;
    font-size: inherit;
    color: aliceblue;
}

.entry-box label 
{
    position: absolute;
    top: 50%;
    left: 10px;
    transform: translateY(-50%);
    color: #f5f5f5;
    pointer-events: none;
    transition: 0.3s;
}

.entry-box svg 
{
    fill: #f5f5f5;
    margin-right: 5px;
    width: 1em;
    height: 1em;
}

.entry-box input[type="text"]:focus + label,
.entry-box input[type="text"]:valid + label
{
    transform: translateY(-150%);
    font-size: 0.8em; 
    color: aliceblue;
}

.entry-box input[type="password"]:focus + label,
.entry-box input[type="password"]:valid + label 
{
    transform: translateY(-150%);
    font-size: 0.8em; 
    color: aliceblue;
}

.forget-button
{
    display: flex;
    align-items: center;
    margin: 20px;
    padding: none;
    position: relative;
}

.forget
{
    background-color: transparent;
    color: aliceblue;
    padding: 10px 10px;
    border: none;
    border-radius: 20px;
    font-size: 16px;
    text-align: center;
    text-decoration: none;
    cursor: pointer;
    transition: background-color 0.3s;
}

.forget:hover
{
    background-color: #3e69ad; 
}

.sign-in-button
{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: relative;
}

.sign-in
{
    background-color: #3e69ad;
    color: aliceblue;
    border: none;
    padding: 15px 130px;
    border-radius: 30px;
    font-size: 16px;
}

.sign-up-button
{
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.sign-up
{
    background-color: transparent;
    color: aliceblue;
    padding: 10px 10px;
    border: none;
    border-radius: 20px;
    font-size: 16px;
    text-align: center;
    text-decoration: none;
    cursor: pointer;
    transition: background-color 0.3s;
}

.sign-up:hover
{
    background-color: #3e69ad; 
}

